# Cloudana10

./: .env  .gitignore  AKASH_INTEGRATION_GUIDE.md  AKASH_QUICKSTART.md  DECENTRALIZATION_ROADMAP.md  DEPIN_MIGRATION.md  DEPLOYMENT.md  Dockerfile  FILES-CREATED.md  INTEGRATION_GUIDE.md  LICENSE  MVP_DEPLOYMENT_GUIDE.md  MVP_intro.md  POUW_TESTNET_PLAN.md  PROJECT_PLAN_POUW.md  README.md  SYSTEM_FLOWCHART.md  UX_PROPOSAL.md  check-system-status.sh  docker-compose.yml  ecosystem.config.cjs  nginx.conf  non-working-templates.json  package-lock.json  package.json  readme.md  replit.md  tsconfig.json  vite.config.ts
.claude/: launch.json
akash-bridge/: .env.example  package.json  tsconfig.json
circuits/: README.md  package.json  pouw_verification.circom  pouw_verify.circom
client/: .env  .env.example  .env.local  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
contract/: .env  .env.example  .gitignore  ABI_EXPORT_STRUCTURE.md  WORKLOAD_REGISTRY_COMPLETION.md  deployedAddress.txt  deployment-addresses.json  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
docs/: BROWSER_VERIFIER.md  Cloudana_Litepaper.md  Cloudana_Whitepaper_v2.md  INTEGRATION_RUNBOOK.md
game-manifests/: .gitignore  QUICKSTART.md  README.md  apply-manifest.sh  delete-workload.sh  list-workloads.sh  memory-game.json  minesweeper.json  pacman.json  snake-game.json  supermario.json  tetris.json
k8s/: configmap.yaml  (+6 more)
pouw-gpu/: Cargo.toml
pouw-gpu/src/: certificate.rs  cupow.rs  lib.rs  main.rs  matrix.rs  transcript.rs
(+446 files in other folders)
